# open-doc

./: LICENSE  README.md  demo.ipynb  ds.py  pipeline.py  pyproject.toml
data/: fin-1.csv  fin-2.csv  fin-3.csv  law-labour.csv  law-ozon.csv  law-urban.csv  law-wb.csv  law-yandex.csv  science-metal.csv  science-oil.csv  science-pubmed.csv  tech-expluatation.csv  tech-instructions.csv  tech-linux.csv
oqa/: __init__.py  ds.py
