[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
dependencies = [
  "re",
  "pathlib",
  "typing",
  "bs4",
	"PyPDF2",
	"os",
	"pandas",
	"dataclasses"
]

[project]
name = "oqa"
version = "0.1.2"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.setuptools]
packages = ["oqa"]