[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "oqa"
version = "0.1.2"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
	"beautifulsoup4>=4.12.0",
	"pypdf2>=3.0.0",
	"pandas>=2.0.0",
]

[tool.setuptools]
packages = ["oqa"]